<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/lilac2"
    tools:context="com.cmpe277.android.takeoutorderms.CustomerItemListViewActivity"
    android:weightSum="10">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme.NoActionBar"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
        app:title="@string/app_name"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list"
            android:textStyle="italic"
            android:fontFamily="serif"
            android:layout_centerInParent="true"
            android:textSize="26sp"
            android:textColor="@android:color/black"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:weightSum="10">


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/sort_by_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sortByName"/>
            <RadioButton
                android:id="@+id/sort_by_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sortByPrice"/>
            <RadioButton
                android:id="@+id/sort_by_pop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sortByPopularity"/>

        </RadioGroup>

        <Button
            android:id="@+id/sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/sort"
            android:layout_weight="3"/>
    </LinearLayout>

    <ListView
        android:id="@+id/item_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="@android:color/darker_gray"
        android:layout_margin="20dp"
        android:dividerHeight="0.5dp"
        android:layout_weight="9"/>

</LinearLayout>
