<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/lilac"
    android:weightSum="12">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="serif"
            android:text="@string/category"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

    </RelativeLayout>

    <GridLayout
        android:columnCount="2"
        android:rowCount="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:padding="14dp">

        <!--Row 1-->
        <!--Col 1-->
        <android.support.v7.widget.CardView
            android:id="@+id/appetizer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            android:onClick="showItemList">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:drawableTop="@drawable/appetizer"
                android:fontFamily="casual"
                android:orientation="vertical"
                android:text="@string/appetizer"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold">

            </TextView>

        </android.support.v7.widget.CardView>

        <!--Row 1-->
        <!--Col 2-->
        <android.support.v7.widget.CardView
            android:id="@+id/dessert"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            android:onClick="showItemList">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:drawableTop="@drawable/dessert"
                android:fontFamily="casual"
                android:orientation="vertical"
                android:text="@string/dessert"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold">

            </TextView>


        </android.support.v7.widget.CardView>

        <!--Row 2-->
        <!--Col 1-->
        <android.support.v7.widget.CardView
            android:id="@+id/drink"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            android:onClick="showItemList">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:drawableTop="@drawable/drink"
                android:fontFamily="casual"
                android:orientation="vertical"
                android:text="@string/drink"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold">

            </TextView>

        </android.support.v7.widget.CardView>

        <!--Row 2-->
        <!--Col 2-->
        <android.support.v7.widget.CardView
            android:id="@+id/mainCourse"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            android:onClick="showItemList">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:drawableTop="@drawable/main"
                android:fontFamily="casual"
                android:orientation="vertical"
                android:text="@string/main"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold">

            </TextView>
        </android.support.v7.widget.CardView>

    </GridLayout>

</LinearLayout>
